// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePage /> should be consistent with snapshots when accessing "/homepage" 1`] = `
<div
  className="HomePage"
>
  <p>
    To get started, edit 
    <code>
      src/routes/App.js
    </code>
     and save to reload.
  </p>
  <p>
    This repo is created over 
    <ExternalLink
      to="https://github.com/facebook/create-react-app"
    >
      create-react-app
    </ExternalLink>
    . Extra features are listed below:
  </p>
  <ButtonGroup>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="default"
    >
      Dependencies
    </Button>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="default"
    >
      DevDependencies
    </Button>
  </ButtonGroup>
  <Divider />
  <Switch>
    <Redirect
      exact={true}
      from="/homepage"
      push={false}
      to="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dev-dependencies"
    />
  </Switch>
</div>
`;

exports[`<HomePage /> should be consistent with snapshots when accessing "/homepage/dependencies" 1`] = `
<div
  className="HomePage"
>
  <p>
    To get started, edit 
    <code>
      src/routes/App.js
    </code>
     and save to reload.
  </p>
  <p>
    This repo is created over 
    <ExternalLink
      to="https://github.com/facebook/create-react-app"
    >
      create-react-app
    </ExternalLink>
    . Extra features are listed below:
  </p>
  <ButtonGroup>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="primary"
    >
      Dependencies
    </Button>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="default"
    >
      DevDependencies
    </Button>
  </ButtonGroup>
  <Divider />
  <Switch>
    <Redirect
      exact={true}
      from="/homepage"
      push={false}
      to="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dev-dependencies"
    />
  </Switch>
</div>
`;

exports[`<HomePage /> should be consistent with snapshots when accessing "/homepage/dev-dependencies" 1`] = `
<div
  className="HomePage"
>
  <p>
    To get started, edit 
    <code>
      src/routes/App.js
    </code>
     and save to reload.
  </p>
  <p>
    This repo is created over 
    <ExternalLink
      to="https://github.com/facebook/create-react-app"
    >
      create-react-app
    </ExternalLink>
    . Extra features are listed below:
  </p>
  <ButtonGroup>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="default"
    >
      Dependencies
    </Button>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="primary"
    >
      DevDependencies
    </Button>
  </ButtonGroup>
  <Divider />
  <Switch>
    <Redirect
      exact={true}
      from="/homepage"
      push={false}
      to="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dev-dependencies"
    />
  </Switch>
</div>
`;

exports[`<HomePage /> should be consistent with snapshots when accessing "/homepage/not-found" 1`] = `
<div
  className="HomePage"
>
  <p>
    To get started, edit 
    <code>
      src/routes/App.js
    </code>
     and save to reload.
  </p>
  <p>
    This repo is created over 
    <ExternalLink
      to="https://github.com/facebook/create-react-app"
    >
      create-react-app
    </ExternalLink>
    . Extra features are listed below:
  </p>
  <ButtonGroup>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="default"
    >
      Dependencies
    </Button>
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="default"
    >
      DevDependencies
    </Button>
  </ButtonGroup>
  <Divider />
  <Switch>
    <Redirect
      exact={true}
      from="/homepage"
      push={false}
      to="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dependencies"
    />
    <Route
      component={[Function]}
      path="/homepage/dev-dependencies"
    />
  </Switch>
</div>
`;
